Lasagne page content

--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -1,2 +1,31 @@
 <!DOCTYPE html>
-<h1>Lasagne</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Odin Recipies</title>
+</head>
+<body>
+    <h1>Lasagne</h1>
+    <img src=./lasagne.jpg>
+    <p>yummy yum yum </p>
+    <p>
+        <strong>Ingredients:</strong>
+        <ul>
+            <li>Meat</li>
+            <li>Cheese</li>
+            <li>Tomatos</li>
+            <li>Pasta</li>
+        </ul>
+    </p>
+    <p>
+        <em>Method:</em>
+        <ol>
+            <li>Cook</li>
+            <li>Simmer</li>
+            <li>Eat</li>
+        </ol>
+    </p>
+</body>
+</html>
