--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipies</title>
+    <title>Bolognese</title>
 </head>
 <body>
     <h1>Lasagne</h1>
-    <img src=../images/lasagne.jpg>
+    <img src=../images/bolognese.jpeg>
     <p>yummy yum yum </p>
     <p>
         <strong>Ingredients:</strong>
