--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipies</h1>
-    <a href=./recipes/lasagne.html>Lasagne</a>
+    <ul>
+        <li><a href=./recipes/lasagne.html>Lasagne</a></li>
+        <li><a href=./recipes/bolognese.html>Bolognese</a></li>
+
+    </ul>
 </body>
 </html>
