--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -4,26 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagne</title>
+    <title>Steak</title>
 </head>
 <body>
-    <h1>Lasagne</h1>
-    <img src=../images/lasagne.jpg>
+    <h1>Steak</h1>
+    <img src=../images/steak.jpeg>
     <p>yummy yum yum </p>
     <p>
         <strong>Ingredients:</strong>
         <ul>
-            <li>Meat</li>
-            <li>Cheese</li>
-            <li>Tomatos</li>
-            <li>Pasta</li>
+            <li>Steak</li>
+            <li>Chips</li>
+            
         </ul>
     </p>
     <p>
         <em>Method:</em>
         <ol>
             <li>Cook</li>
-            <li>Simmer</li>
             <li>Eat</li>
         </ol>
     </p>
