--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href=./recipes/lasagne.html>Lasagne</a></li>
         <li><a href=./recipes/bolognese.html>Bolognese</a></li>
-
+        <li><a href=./recipes/steak.html>Steak</a></li>
     </ul>
 </body>
 </html>
